k8s_env_setup/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - kraeja.com
    - ping.kraeja.com
    - storage.kraeja.com
    secretName: tls-secret
  rules:
  - host: kraeja.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          serviceName: home-service
          servicePort: 5678
  - host: ping.kraeja.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          serviceName: ping-service
          servicePort: 5678
  - host: storage.kraeja.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          serviceName: storage-service
          servicePort: 23011
